# TestInsight-AI

./: .env.example  .env.production.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  tox.toml
backend/: .dockerignore  Dockerfile  README.md  __init__.py  main.py
backend/api/: __init__.py  endpoints.py  main.py
backend/api/routers/: ai.py  analysis.py  constants.py  git.py  jenkins.py  settings.py  system.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py  ai_analyzer.py  gemini_api.py  gemini_models_service.py  git_client.py  jenkins_client.py  security_utils.py  service_config.py  settings_service.py
backend/services/service_config/: base.py  client_creators.py  config_getters.py  connection_testers.py  status_checkers.py
backend/tests/: __init__.py  conftest.py  test_main.py
backend/tests/api/: test_ai_router.py  test_analysis.py  test_endpoints.py  test_settings.py
backend/tests/models/: test_schemas.py
backend/tests/services/: test_ai_analyzer.py  test_ai_analyzer_coverage.py  test_ai_analyzer_repo_search.py  test_connection_testers_coverage.py  test_gemini_api.py  test_git_client.py  test_jenkins_client.py  test_security_utils.py  test_service_config.py  (+2 more)
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  setupTests.ts
(+16 files in other folders)
